# sc-tool

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
analysis/: annotation.py  de.py  doublets.py  io.py  preprocessing.py  qc.py  reduction.py
pages/: 01_Upload.py  02_QC.py  03_Preprocessing.py  04_Reduction.py  05_Annotation.py  06_DE.py  07_Export.py  home.py
tests/: test_annotation.py  test_de.py  test_doublets.py  test_io.py  test_preprocessing.py  test_qc.py  test_reduction.py
ui/: plots.py  state.py  theme.py
