[project]
name = "sc-tool"
version = "0.1.0"
description = "Interactive single-cell RNA-seq analysis application"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "anndata>=0.10",
    "scanpy>=1.10",
    "scikit-misc>=0.3",
    "igraph>=0.11",
    "celltypist>=1.6",
    "harmonypy>=0.0.9",
    "plotly>=5.20",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-image>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# E/F: pyflakes + pycodestyle errors, I: import sorting, UP: pyupgrade
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ensures pytest can import our local packages (analysis/, ui/) without installing
pythonpath = ["."]
